versions/v3.7.0/build/dts/api/bindings/gpio/st,dsi-lcd-qsh-030.md
---
version: v3.7.0
source_url: https://docs.zephyrproject.org/3.7.0/build/dts/api/bindings/gpio/st,dsi-lcd-qsh-030.html
original_path: build/dts/api/bindings/gpio/st,dsi-lcd-qsh-030.html
---

This is the documentation for the latest (main) development branch of
Zephyr. If you are looking for the documentation of previous releases, use
the drop-down list at the bottom of the left panel and select the desired version.

# st,dsi-lcd-qsh-030

Vendor: [STMicroelectronics](../../bindings.md#dt-vendor-st)

## Description

```text
GPIO pins exposed on QSH-030-01-F-D-A connector used as DSI LCD connector.

Connector layout (not mapped GPIOs in parentheses):

  (1)   GND                             -  (2)
  (3)   DSI_CK_P                TOUCH_INT   4
  (5)   DSI_CK_N                        -  (6)
  (7)   GND                             -  (8)
  (9)   DSI_D0_P                        -  (10)
  (11)  DSI_D0_N                        -  (12)
  (13)  GND                             -  (14)
  (15)  DSI_D1_P                        -  (16)
  (17)  DSI_D1_N                        -  (18)
  (19)  GND                             -  (20)
  (21)  BLVDD(+5V)                      -  (22)
  (23)  BLVDD(+5V)                      -  (24)
  (25)  -                               -  (26)
  (27)  BLGND                           -  (28)
  (29)  BLGND                           -  (30)
  (31)  -                               -  (32)
  (33)  -                               -  (34)
   35   SCLK/MCLK          VDD(2.8V-3.3V)  (36)
   37   LRCLK                           -  (38)
   39   I2S                       I2C_SDA   40
  (41)  -                               -  (42)
  (43)  -                         I2C_SCL   44
   45   CEC_CLK                         -  (46)
   47   CEC                             -  (48)
   49   DSI_TE                          -  (50)
  (51)  -                               -  (52)
   53   BL_CTRL                         -  (54)
  (55)  -                               -  (56)
   57   RESET                           -  (58)
  (59)  -                               -  (60)
```

## Properties

Node specific propertiesDeprecated node specific propertiesBase properties

Properties not inherited from the base binding file.

| Name | Type | Details |
| --- | --- | --- |
| `gpio-map` | `compound` | This property is **required**. |
| `gpio-map-mask` | `compound` |  |
| `gpio-map-pass-thru` | `compound` |  |
| `#gpio-cells` | `int` | ```text Number of items to expect in a GPIO specifier ```  This property is **required**. |

Deprecated properties not inherited from the base binding file.

(None)

Properties inherited from the base binding file, which defines
common properties that may be set on many nodes. Not all of these
may apply to the “st,dsi-lcd-qsh-030” compatible.

| Name | Type | Details |
| --- | --- | --- |
| `wakeup-source` | `boolean` | ```text Property to identify that a device can be used as wake up source.  When this property is provided a specific flag is set into the device that tells the system that the device is capable of wake up the system.  Wake up capable devices are disabled (interruptions will not wake up the system) by default but they can be enabled at runtime if necessary. ``` |
| `power-domain` | `phandle` | ```text Power domain the device belongs to.  The device will be notified when the power domain it belongs to is either suspended or resumed. ``` |
| `zephyr,pm-device-runtime-auto` | `boolean` | ```text Automatically configure the device for runtime power management after the init function runs. ``` |
| `zephyr,disabling-power-states` | `phandles` | ```text List of power states that will disable this device power. ``` |
| `status` | `string` | ```text indicates the operational status of a device ```  Legal values: `'ok'`, `'okay'`, `'disabled'`, `'reserved'`, `'fail'`, `'fail-sss'`  See [Important properties](../../../intro-syntax-structure.md#dt-important-props) for more information. |
| `compatible` | `string-array` | ```text compatible strings ```  This property is **required**.  See [Important properties](../../../intro-syntax-structure.md#dt-important-props) for more information. |
| `reg` | `array` | ```text register space ```  See [Important properties](../../../intro-syntax-structure.md#dt-important-props) for more information. |
| `reg-names` | `string-array` | ```text name of each register space ``` |
| `interrupts` | `array` | ```text interrupts for device ```  See [Important properties](../../../intro-syntax-structure.md#dt-important-props) for more information. |
| `interrupts-extended` | `compound` | ```text extended interrupt specifier for device ``` |
| `interrupt-names` | `string-array` | ```text name of each interrupt ``` |
| `interrupt-parent` | `phandle` | ```text phandle to interrupt controller node ``` |
| `label` | `string` | ```text Human readable string describing the device (used as device_get_binding() argument) ```  See [Important properties](../../../intro-syntax-structure.md#dt-important-props) for more information.  This property is **deprecated**. |
| `clocks` | `phandle-array` | ```text Clock gate information ``` |
| `clock-names` | `string-array` | ```text name of each clock ``` |
| `#address-cells` | `int` | ```text number of address cells in reg property ``` |
| `#size-cells` | `int` | ```text number of size cells in reg property ``` |
| `dmas` | `phandle-array` | ```text DMA channels specifiers ``` |
| `dma-names` | `string-array` | ```text Provided names of DMA channel specifiers ``` |
| `io-channels` | `phandle-array` | ```text IO channels specifiers ``` |
| `io-channel-names` | `string-array` | ```text Provided names of IO channel specifiers ``` |
| `mboxes` | `phandle-array` | ```text mailbox / IPM channels specifiers ``` |
| `mbox-names` | `string-array` | ```text Provided names of mailbox / IPM channel specifiers ``` |
| `zephyr,deferred-init` | `boolean` | ```text Do not initialize device automatically on boot. Device should be manually initialized using device_init(). ``` |
